--- a/reading.Rmd
+++ b/reading.Rmd
@@ -155,8 +155,17 @@ sub-folder, named `data`, relative to where we are running our R code.
 Here is what the file would look like in a plain text editor (a program that removes
 all formatting, like bolding or different fonts):
 
-```{bash, echo=FALSE, comment=NA}
-head -n 10 data/can_lang.csv
+```code
+category,language,mother_tongue,most_at_home,most_at_work,lang_known
+Aboriginal languages,"Aboriginal languages, n.o.s.",590,235,30,665
+Non-Official & Non-Aboriginal languages,Afrikaans,10260,4785,85,23415
+Non-Official & Non-Aboriginal languages,"Afro-Asiatic languages, n.i.e.",1150,44
+Non-Official & Non-Aboriginal languages,Akan (Twi),13460,5985,25,22150
+Non-Official & Non-Aboriginal languages,Albanian,26895,13135,345,31930
+Aboriginal languages,"Algonquian languages, n.i.e.",45,10,0,120
+Aboriginal languages,Algonquin,1260,370,40,2480
+Non-Official & Non-Aboriginal languages,American Sign Language,2685,3020,1145,21
+Non-Official & Non-Aboriginal languages,Amharic,22465,12785,200,33670
 ```
 
 And here is a review of how we can use `read_csv` to load it into R. First we 
@@ -195,8 +204,20 @@ gives the data scientist useful context and information about the data,
 however, it is not well formatted or intended to be read into a data frame cell
 along with the tabular data that follows later in the file.
 
-```{bash, echo=FALSE, comment=NA}
-head -n 13 data/can_lang_meta-data.csv
+```code
+Data source: https://ttimbers.github.io/canlang/
+Data originally published in: Statistics Canada Census of Population 2016.
+Reproduced and distributed on an as is basis with their permission
+category,language,mother_tongue,most_at_home,most_at_work,lang_known
+Aboriginal languages,"Aboriginal languages, n.o.s.",590,235,30,665
+Non-Official & Non-Aboriginal languages,Afrikaans,10260,4785,85,23415
+Non-Official & Non-Aboriginal languages,"Afro-Asiatic languages, n.i.e.",1150,44
+Non-Official & Non-Aboriginal languages,Akan (Twi),13460,5985,25,22150
+Non-Official & Non-Aboriginal languages,Albanian,26895,13135,345,31930
+Aboriginal languages,"Algonquian languages, n.i.e.",45,10,0,120
+Aboriginal languages,Algonquin,1260,370,40,2480
+Non-Official & Non-Aboriginal languages,American Sign Language,2685,3020,1145,21
+Non-Official & Non-Aboriginal languages,Amharic,22465,12785,200,33670
 ```
 
 With this extra information being present at the top of the file, using
@@ -231,8 +252,10 @@ canlang_data
 How did we know to skip three lines? We looked at the data! The first three lines
 of the data had information we didn't need to import: 
 
-```{bash, echo=FALSE, comment=NA}
-head -n 3 data/can_lang_meta-data.csv
+```code
+Data source: https://ttimbers.github.io/canlang/
+Data originally published in: Statistics Canada Census of Population 2016.
+Reproduced and distributed on an as is basis with their permission
 ```
 
 The column names began at line 4, so we skipped the first three lines. 
@@ -243,8 +266,17 @@ Another common way data is stored is with tabs as the delimiter. Notice the
 data file, `can_lang_tab.tsv`, has tabs in between the columns instead of
 commas. 
 
-```{bash, echo=FALSE, comment=NA}
-head -n 10 data/can_lang_tab.tsv
+```code
+category    language    mother_tongue   most_at_home    most_at_work    lang_kno
+Aboriginal languages    Aboriginal languages, n.o.s.    590 235 30  665
+Non-Official & Non-Aboriginal languages Afrikaans   10260   4785    85  23415
+Non-Official & Non-Aboriginal languages Afro-Asiatic languages, n.i.e.  1150    
+Non-Official & Non-Aboriginal languages Akan (Twi)  13460   5985    25  22150
+Non-Official & Non-Aboriginal languages Albanian    26895   13135   345 31930
+Aboriginal languages    Algonquian languages, n.i.e.    45  10  0   120
+Aboriginal languages    Algonquin   1260    370 40  2480
+Non-Official & Non-Aboriginal languages American Sign Language  2685    3020    
+Non-Official & Non-Aboriginal languages Amharic 22465   12785   200 33670
 ```
 
 To read in this type of data, we can use the `read_tsv` 
@@ -273,8 +305,17 @@ this same data set with no column names and uses tabs as the delimiter
 
 Here is how the file would look in a plain text editor:
 
-```{bash, echo=FALSE, comment=NA}
-head -n 10 data/can_lang.tsv
+```code
+Aboriginal languages    Aboriginal languages, n.o.s.    590 235 30  665
+Non-Official & Non-Aboriginal languages Afrikaans   10260   4785    85  23415
+Non-Official & Non-Aboriginal languages Afro-Asiatic languages, n.i.e.  1150    
+Non-Official & Non-Aboriginal languages Akan (Twi)  13460   5985    25  22150
+Non-Official & Non-Aboriginal languages Albanian    26895   13135   345 31930
+Aboriginal languages    Algonquian languages, n.i.e.    45  10  0   120
+Aboriginal languages    Algonquin   1260    370 40  2480
+Non-Official & Non-Aboriginal languages American Sign Language  2685    3020    
+Non-Official & Non-Aboriginal languages Amharic 22465   12785   200 33670
+Non-Official & Non-Aboriginal languages Arabic  419890  223535  5585    629055
 ```
 
 To get this into R using the `read_delim` function, we specify the first
