removed graphics:yes from index.Rmd since we don't build the PDF off that, and then added the 000 tag back to web scraping example

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -870,6 +870,10 @@ code here](img/website_source.txt)):
     </p>
 </li>
          <li class="result-row" data-pid="6788463837">
+                  
+        <a href="https://vancouver.craigslist.org/nvn/apa/d/north-vancouver-luxu
+                <span class="result-price">$2285</span>
+        </a>
 ```
 
 Oof...you can tell that the source code for a web page is not really designed
