added teaching scale_color_discrete to viz

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -287,7 +287,7 @@ default settings.
 knitr::include_graphics("img/ggplot_function_scatter.jpeg")
 ```
 
-```{r 03-data-co2-scatter, warning=FALSE, message=FALSE, fig.height = 4, fig.width = 6, fig.cap = "Scatter plot of atmospheric concentration of CO$_{2}$ over time."}
+```{r 03-data-co2-scatter, warning=FALSE, message=FALSE, fig.width = 5, fig.height = 4, fig.cap = "Scatter plot of atmospheric concentration of CO$_{2}$ over time."}
 co2_scatter <- ggplot(co2_df, aes(x = date_measured, y = ppm)) +
   geom_point()
 
@@ -318,7 +318,7 @@ Let's now try to visualize the `co2_df` as a line plot
 with just the default arguments: 
 \index{ggplot!geom\_line}
 
-```{r 03-data-co2-line, warning=FALSE, message=FALSE, fig.height = 4, fig.width = 6, fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ over time."}
+```{r 03-data-co2-line, warning=FALSE, message=FALSE, fig.width = 5, fig.height = 4, fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ over time."}
 co2_line <- ggplot(co2_df, aes(x = date_measured, y = ppm)) +
   geom_line()
 
@@ -351,12 +351,12 @@ change the font size, we use the `theme` function with the `text` argument:
 > Interested readers may consult the `theme` function documentation;
 > see the additional resources section at the end of this chapter.
 
-```{r 03-data-co2-line-2, warning=FALSE, message=FALSE, fig.height = 4, fig.width = 6, fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ over time with clearer axes and labels."}
+```{r 03-data-co2-line-2, warning=FALSE, message=FALSE, fig.width = 5, fig.height = 4, fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ over time with clearer axes and labels."}
 co2_line <- ggplot(co2_df, aes(x = date_measured, y = ppm)) +
   geom_line() +
   xlab("Year") +
   ylab("Atmospheric CO2 (ppm)") +
-  theme(text = element_text(size = 16))
+  theme(text = element_text(size = 14))
 
 co2_line
 ```
@@ -385,7 +385,7 @@ to convert the character strings we provide to `c` to `date` vectors.
 > but is not loaded by it. 
 > Hence we need to load it separately in the code below.
 
-```{r 03-data-co2-line-3, warning = FALSE, message = FALSE, fig.height = 4, fig.width = 6, fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ from 1990 to 1994."}
+```{r 03-data-co2-line-3, warning = FALSE, message = FALSE, fig.width = 5, fig.height = 4, fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ from 1990 to 1994."}
 library(lubridate)
 
 co2_line <- ggplot(co2_df, aes(x = date_measured, y = ppm)) +
@@ -393,7 +393,7 @@ co2_line <- ggplot(co2_df, aes(x = date_measured, y = ppm)) +
   xlab("Year") +
   ylab("Atmospheric CO2 (ppm)") +
   xlim(c(date("1990-01-01"), date("1993-12-01"))) +
-  theme(text = element_text(size = 16))
+  theme(text = element_text(size = 14))
 
 co2_line
 ```
@@ -454,7 +454,7 @@ function with the `waiting` variable on the horizontal axis, the `eruptions`
 variable on the vertical axis, and the `geom_point` geometric object.
 The result is shown in Figure \@ref(fig:03-data-faithful-scatter).
 
-```{r 03-data-faithful-scatter, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of waiting time and eruption time."}
+```{r 03-data-faithful-scatter, warning=FALSE, message=FALSE, fig.width = 5, fig.height = 4, fig.cap = "Scatter plot of waiting time and eruption time."}
 faithful_scatter <- ggplot(faithful, aes(x = waiting, y = eruptions)) +
   geom_point()
 
@@ -468,11 +468,11 @@ the points are generally nicely visually separated, and the pattern they form
 is clear.  In order to refine the visualization, we need only to add axis
 labels and make the font more readable:
 
-```{r 03-data-faithful-scatter-2, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of waiting time and eruption time with clearer axes and labels."}
+```{r 03-data-faithful-scatter-2, warning=FALSE, message=FALSE, fig.width = 5, fig.height = 4, fig.cap = "Scatter plot of waiting time and eruption time with clearer axes and labels."}
 faithful_scatter <- ggplot(faithful, aes(x = waiting, y = eruptions)) +
   geom_point() +
   labs(x = "Waiting Time (mins)", y = "Eruption Duration (mins)") +
-  theme(text = element_text(size = 16))
+  theme(text = element_text(size = 14))
 
 faithful_scatter
 ```
@@ -502,7 +502,7 @@ We will begin with a scatter plot of the `mother_tongue` and `most_at_home` colu
 The resulting plot is shown in Figure \@ref(fig:03-mother-tongue-vs-most-at-home).
 \index{ggplot!geom\_point}
 
-```{r 03-mother-tongue-vs-most-at-home, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home."}
+```{r 03-mother-tongue-vs-most-at-home, fig.width=4.25, fig.height=3.5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home."}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   geom_point()
 ``` 
@@ -516,7 +516,7 @@ make the axes labels on the plots more readable.
 \index{escape character} We should also increase the font size to further 
 improve readability.
 
-```{r 03-mother-tongue-vs-most-at-home-labs, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with x and y labels."}
+```{r 03-mother-tongue-vs-most-at-home-labs, fig.width=4.25, fig.height=3.5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with x and y labels."}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   geom_point() +
   labs(x = "Language spoken most at home \n (number of Canadian residents)",
@@ -556,6 +556,7 @@ to Canada's two official languages by filtering the data:
 can_lang |>
   filter(language == "English" | language == "French")
 ```
+
 Recall that our question about this data pertains to *all* languages;
 so to properly answer our question, 
 we will need to adjust the scale of the axes so that we can clearly
@@ -580,14 +581,14 @@ to put commas in these numbers to increase their readability.
 We can do this in R by passing the `label_comma` function (from the `scales` package)
 to the `labels` argument of the `scale_x_log10` and `scale_x_log10` functions.
 
-```{r 03-mother-tongue-vs-most-at-home-scale, message = FALSE, warning =  FALSE, fig.width = 5.75, fig.height = 5, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with log adjusted x and y axes."}
+```{r 03-mother-tongue-vs-most-at-home-scale, message = FALSE, warning =  FALSE, fig.width=4.25, fig.height=3.5, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with log adjusted x and y axes."}
 library(scales)
 
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   geom_point() +
   labs(x = "Language spoken most at home \n (number of Canadian residents)",
        y = "Mother tongue \n (number of Canadian residents)") +
-  theme(text = element_text(size = 16)) +
+  theme(text = element_text(size = 14)) +
   scale_x_log10(labels = label_comma()) +
   scale_y_log10(labels = label_comma())
 ```
@@ -637,7 +638,7 @@ Finally, we will edit the visualization to use the percentages we just computed
 units). Figure \@ref(fig:03-mother-tongue-vs-most-at-home-scale-props) displays
 the final result.
 
-```{r 03-mother-tongue-vs-most-at-home-scale-props, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home."}
+```{r 03-mother-tongue-vs-most-at-home-scale-props, fig.width=4.25, fig.height=3.5, warning=FALSE, fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home."}
 ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent)) +
   geom_point() +
   labs(x = "Language spoken most at home \n (percentage of Canadian residents)",
@@ -694,7 +695,7 @@ that the `category` column should color the points. Adding this argument will
 color the points according to their group and add a legend at the side of the
 plot. 
 
-```{r 03-scatter-color-by-category, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category."}
+```{r 03-scatter-color-by-category, warning=FALSE, fig.height=3.5, fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category with the legend edited."}
 ggplot(can_lang, aes(x = most_at_home_percent, 
                      y = mother_tongue_percent, 
                      color = category)) +
@@ -706,7 +707,33 @@ ggplot(can_lang, aes(x = most_at_home_percent,
   scale_y_log10(labels = comma)
 ```
 
-In Figure \@ref(fig:03-scatter-color-by-category), the points are colored with
+The legend in Figure \@ref(fig:03-scatter-color-by-category) 
+is overly long and redundant, and takes up valuable plot area. 
+We can improve this by changing the legend title 
+and legend category text to be shorter, and less redundant.
+To change the title, we set `color = "Language category"` in the `labs` function.
+To change the legend category text, we use the `scale_color_discrete` function.
+The `scale_color_discrete` function `labels` argument 
+takes a character vector of new category labels. 
+We change these to `"Aboriginal"`, `"Other"`, and `"Official"`.
+
+```{r 03-scatter-color-by-category-legend-edit, warning=FALSE, fig.height=3.5, fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category with the legend edited."}
+ggplot(can_lang, aes(x = most_at_home_percent, 
+                     y = mother_tongue_percent, 
+                     color = category)) +
+  geom_point() +
+  labs(x = "Language spoken most at home \n (percentage of Canadian residents)",
+       y = "Mother tongue \n (percentage of Canadian residents)",
+       color = "Language category") +
+  theme(text = element_text(size = 14)) +
+  scale_x_log10(labels = comma) +
+  scale_y_log10(labels = comma) +
+  scale_color_discrete(labels = c("Aboriginal", 
+                                "Other",
+                                "Official"))
+```
+
+In Figure \@ref(fig:03-scatter-color-by-category-legend-edit), the points are colored with
 the default `ggplot2` color palette. But what if you want to use different
 colors? In R, one package that provides alternative color 
 palettes \index{color palette} is `RColorBrewer` [@RColorBrewer]. You can 
@@ -736,18 +763,21 @@ this makes the scatter point shapes different for each category. This kind of
 visual redundancy&mdash;i.e., conveying the same information with both scatter point color and shape&mdash;can
 further improve the clarity and accessibility of your visualization.
 
-```{r scatter-color-by-category-palette, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category with color-blind friendly colors."}
+```{r scatter-color-by-category-palette, fig.height=3.5, warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category with color-blind friendly colors."}
 ggplot(can_lang, aes(x = most_at_home_percent, 
                      y = mother_tongue_percent, 
                      color = category, 
                      shape = category)) +
   geom_point() +
   labs(x = "Language spoken most at home \n (percentage of Canadian residents)",
-       y = "Mother tongue \n (percentage of Canadian residents)") +
+       y = "Mother tongue \n (percentage of Canadian residents)",
+       color = "Language category") +
   theme(text = element_text(size = 14)) +
   scale_x_log10(labels = comma) +
   scale_y_log10(labels = comma) +
-  scale_color_brewer(palette = "Set2")
+  scale_color_discrete(labels = c("Aboriginal", 
+                                "Other",
+                                "Official"))
 ```
 
 From the visualization in Figure \@ref(fig:scatter-color-by-category-palette), 
@@ -928,7 +958,7 @@ islands_bar <- ggplot(islands_top12,
                           fill = landmass_type)) +
   geom_bar(stat = "identity") +
   labs(x = "Size (1000 square mi)", y = "Landmass",  fill = "Type") +
-  theme(text = element_text(size = 16))
+  theme(text = element_text(size = 14))
 
 islands_bar
 ```
@@ -1388,7 +1418,7 @@ Let's learn how to save plot images to these different file formats using a
 scatter plot of 
 the [Old Faithful data set](https://www.stat.cmu.edu/~larry/all-of-statistics/=data/faithful.dat) [@faithfuldata].
 
-```{r 03-plot-line, collapse=TRUE, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of waiting time and eruption time."}
+```{r 03-plot-line, collapse=TRUE, warning=FALSE, message=FALSE, fig.width = 4.5, fig.height = 3.75, fig.cap = "Scatter plot of waiting time and eruption time."}
 library(svglite) # we need this to save SVG files
 faithful_plot <- ggplot(data = faithful, aes(x = waiting, y = eruptions)) +
   geom_point() +
@@ -1437,8 +1467,7 @@ file_sizes <- tibble(`Image type` = c("Bitmap / Raster",
                         paste(round(file.info("img/faithful_plot.svg")["size"] 
                                     / 1000000, 2), "MB")))
 kable(file_sizes,
-      caption = paste0("File sizes of `faithful_plot`",
-                       "when saved as different file formats."))
+      caption = "File sizes of the scatter plot of the Old Faithful data set when saved as different file formats.")
 ```
 
 Take a look at the file sizes in Table \@ref(tab:filesizes).
